# ai-preprint-forge

./: .dockerignore  .env_teamplate  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  lint.py  preprint_forge.py  pyproject.toml  quickstart.sh  requirements.txt  setup.py  setup_project.py
app/: main.py
app/api/: deps.py
app/api/routes/: papers.py
app/cli/: commands.py
app/core/: config.py  logging.py
app/models/: paper.py
app/services/: git_manager.py  name_tracker.py  paper_generator.py
app/services/social_media/: __init__.py  base.py  facebook.py  linkedin.py  manager.py
app/utils/: latex.py
deploy/scripts/: deploy-docker.sh
deploy/systemd/: ai-preprint-forge.service  install-service.sh
social_media/: __init__.py  base.py  facebook.py  linkedin.py  manager.py  twitter.py
tests/: test_api_routes.py  test_cli.py  test_latex_utils.py  test_name_tracker.py
